jswt-semantics/src/locals/snapshots/jswt_semantics__locals__new__test__error_on_undefined_variable.snap
---
source: jswt-semantics/src/locals/new.rs
expression: local
---
LocalSemanticResolver {
    symbols: ScopedSymbolTable {
        scopes: [
            Span {
                file: "program",
                module: "root",
                start: 0,
                end: 0,
            },
        ],
        table: {
            Span {
                file: "program",
                module: "root",
                start: 0,
                end: 0,
            }: Scope {
                symbols: {
                    "test": Function(
                        FunctionSignature {
                            params: [],
                            returns: Binding(
                                "void",
                            ),
                        },
                    ),
                },
                ret: None,
            },
            Span {
                file: "test_error_on_undefined_variable",
                module: "module/test_error_on_undefined_variable",
                start: 25,
                end: 51,
            }: Scope {
                symbols: {},
                ret: None,
            },
        },
    },
    bindings: BindingsTable {
        bindings: {},
    },
    errors: [
        VariableNotDefined {
            name: "x",
            span: Span {
                file: "test_error_on_undefined_variable",
                module: "module/test_error_on_undefined_variable",
                start: 39,
                end: 40,
            },
        },
    ],
}
